test/tests/errors/error-rhv-const.sm
// true
// false
/**/
/**/

program {
    proc x(y) {
        output y;
    }
    const y = x;
}